/*
 * $Id: ChangeLog,v 1.1963 2003/12/30 05:21:56 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-30 11:20 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtxvt/gtxvt.c
    * Fixed a problem with gcc < ver. 3

2003-12-30 00:38 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapigt.h
  * config/linux/global.cf
  + source/rtl/gtxvt/Makefile
  + source/rtl/gtxvt/gtxvt.c
    + Added GTXVT: Xwindows virtual terminal for unices

  * source/vm/thread.c
    ! Fixed threadsleep() to be interrupt compliant and hb_treadKillAll()
      that may have caused deadlocks.

  * tests/Makefile
    - Remove compilation of gtQTc samples
    + Added compilation of gtxvt; just set HB_GT_LIB=gtxvt and you'll have
      your tests compiled with "make test" in x virtual terminal.

  * tests/mousetst.prg
    ! Added support for mouse with more than 3 buttons.
  * tests/service.prg
    ! Using the console to write timer data.

  * source/rtl/hblog.prg

2003-12-29  14:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed wrong conversion of [...] to "..." when strotrim was called from CommandStuff()
      by adding logic to reset s_bArray based on the value of the KEY of the rule.

2003-12-29 22:56 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/dos/watcom.cf
    - removed -ol optimization

  * xharbour/config/w32/watcom.cf
    + added proper include directory

  * xharbour/source/rtl/gtdos/gtdos.c
    * time sync before tone for Clipper compatibility

2003-12-29  11:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/rtl/seconds.c
    * Added HB_EXPORT to hb_secondsCPU()

  * source/rtl/gtwin/gtwin.c
    * MSVC compilation

2003-12-29 16:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>